# docs/swagger.json
@@ -1,7 +1,6 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Description for what is this security definition being used",
         "title": "CAT Backend",
         "contact": {},
         "version": "1.0"
@@ -9,6 +8,34 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/api/outfits": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "全ての衣装情報を取得する",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "outfits"
+                ],
+                "summary": "全衣装取得",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.OutfitResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/login": {
             "post": {
                 "description": "IDとパスワードで認証し、JWTトークンを返す。このJWTトークンは Authorization: Bearer \u003ctoken\u003e としてヘッダーに付加してください。",
@@ -79,6 +106,26 @@
         }
     },
     "definitions": {
+        "controllers.OutfitResponse": {
+            "type": "object",
+            "properties": {
+                "asset_path": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "series_id": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.UserLoginRequest": {
             "type": "object",
             "required": [
@@ -125,6 +172,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JTW": {
+            "description": "Bearer: に続いてトークンを入力してください",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
